<resources>
    <string name="app_name">MyTicker</string>
    <string name="action_settings">Settings</string>
    <string name="retrieve">Retrieve Stock Quote</string>
    <string name="symbol">Symbol</string>
    <string name="company">Company</string>
    <string name="exchange">Exchange</string>
    <string name="volume">Volume</string>
    <string name="last_trade">Last Trade</string>
    <string name="change">Change</string>
    <string name="perc_change">Percent Change</string>
    <string name="stock_chart">Stock Chart</string>
    <string name="retrieving">Retrieving&#8230;</string>
    <string name="title_activity_add_stock">Add Stock</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_my_stocks">My Stocks</string>
    <string name="title_activity_details">Details</string>
    <string name="title_activity_modify_or_sell">Modify Or Sell</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_check_price">CheckPrice</string>
    <string name="title_activity_help">HelpActivity</string>

    <string name="lorem_ipsum">lorem ipsum</string>

</resources>
