<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.wordpress.shloknangia.myticker.MainActivity"
    tools:showIn="@layout/activity_main">


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="*"
            android:stretchColumns="*" >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/edit_symbol"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:inputType="textCapCharacters"
                    android:maxLength="5" />

                <Button
                    android:id="@+id/bn_retrieve"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:onClick="retrieveQuote"
                    android:text="@string/retrieve" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dip" >

                <TextView
                    android:id="@+id/lbl_symbol"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:text="@string/symbol" />

                <TextView
                    android:id="@+id/tv_symbol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dip" >

                <TextView
                    android:id="@+id/lbl_exchange"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:text="@string/exchange" />

                <TextView
                    android:id="@+id/tv_exchange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dip" >

                <TextView
                    android:id="@+id/lbl_last"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:text="@string/last_trade" />

                <TextView
                    android:id="@+id/tv_last"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dip" >

                <TextView
                    android:id="@+id/lbl_change"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:text="@string/change" />

                <TextView
                    android:id="@+id/tv_change"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dip" >

                <TextView
                    android:id="@+id/lbl_perc_change"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:text="@string/perc_change"/>

                <TextView
                    android:id="@+id/tv_perc_change"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dip"
                android:visibility="invisible" >

                <TextView
                    android:id="@+id/lbl_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/company" />

                <TextView
                    android:id="@+id/tv_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dip"
                android:visibility="invisible">

                <TextView
                    android:id="@+id/lbl_volume"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:text="@string/volume" />

                <TextView
                    android:id="@+id/tv_volume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dip" >

                <ImageView
                    android:id="@+id/img_chart"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:layout_span="2"
                    android:contentDescription="@string/stock_chart" />
            </TableRow>
        </TableLayout>

    <Button
        android:text="Google Search"
        android:layout_gravity="center"
        android:onClick="googleSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    

    </LinearLayout>
